- Preparing for update

--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -735,3 +735,7 @@ tfoot#footer {
     text-overflow: clip;
     text-wrap: balance;
 }
+
+vaadin-vertical-layout#campaignFormLayout vaadin-tabsheet vaadin-tabs {
+	background: rgb(67, 67, 67) !important
+}
