--- a/apmis-flow/frontend/themes/apmis-theme/main-layout.css
+++ b/apmis-flow/frontend/themes/apmis-theme/main-layout.css
@@ -194,6 +194,26 @@ vcf-nav-item#navitem:active a, vcf-nav-item#menuItems:active a {
 	color: white !important;
 }
 
+/* Add red color and red dot for vcf-nav-item with id 'notification' */
+vcf-nav-item#notification {
+	color: red !important; /* Red color for text */
+	font-family: Lato;       /* Keep the font-family */
+	font-weight: 300 !important; /* Ensure font-weight remains applied */
+	position: relative;    /* Ensure dot is positioned relative to the item */
+}
+
+/* Add the red dot */
+vcf-nav-item#notification::before {
+	content: '';
+	position: absolute;
+	top: 20px;          /* Adjust as necessary to position vertically */
+	right: 10px;         /* Adjust as necessary to position horizontally */
+	width: 15px;
+	height: 15px;
+	background-color: red;
+	border-radius: 50%; /* Makes the dot circular */
+}
+
 /*vcf-nav-item#navitem @active, vcf-nav-item#menuItems @active {
 	background: #F08F3E !important;
 	color: white !important;
